# tabby-testing-pipeline

./: .gitignore  LICENSE  README.md  README.org  get_dataset.sh  justfile  pyproject.toml  requirements.txt
data/raw/: bucket_sort.py
quality_testing/: fetch_suggestions.py  main.py  process_data.py  tabby_request_body.json  tools_snipppets.py
quality_testing/data/processed/: tested-bucket_sort.json
quality_testing/data/tabby-suggestions/: tabby-gen-0-bucket_sort.py
quality_testing/src/: api_connection.py  make_plot.py  process_data.py
src/: api_connection.py  const.py  main.py  make_plot-4.py  prefix_generator.py  query_server-2.py  similarity_tester-3.py  similarity_tester.py  sort_data-1.py  sort_data.py  static_tester-3.py  tabby_connection.py  utils.py
tabby_local_server_setup/: cpu_run_tabby.sh  gpu_run_tabby.sh
thesis/: main.tex
